working on new ui

--- a/src/main/webapp/public/login.xhtml
+++ b/src/main/webapp/public/login.xhtml
@@ -56,11 +56,8 @@
 
 
                 <div class="signin-header">
-                    <a href="#" class="logo">
-                        <div class="demo-logo bg-primary">
+                    <a href="http://www.godesk.cl" class="logo">
                           <p:graphicImage library="images" name="LogoGODesk.png" title="GoDesk"/>
-                        </div>&nbsp;
-                        <strong>Go</strong>Desk
                     </a> <!-- / .logo -->
                     <a href="signup.xhtml" class="btn btn-primary">Registrarse</a>
                 </div> <!-- / .header -->
